--- a/admin-dashboard/backend/package.json
+++ b/admin-dashboard/backend/package.json
@@ -15,13 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
-    "nodemon": "^2.0.19",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "sessions": "^0.0.2-7"
