--- a/admin-dashboard/backend/package.json
+++ b/admin-dashboard/backend/package.json
@@ -17,6 +17,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.2"
   }
 }
